fix code browser default code font size is too small

--- a/app/assets/stylesheets/less/_common.less
+++ b/app/assets/stylesheets/less/_common.less
@@ -14,6 +14,10 @@ body {
 
 }
 
+code {
+    font-size: 12px;
+}
+
 a {
     color: inherit;
     text-decoration: none;
